Style: aterações no footer + espaçamento na home

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -19,15 +19,25 @@
     </div>
 
     <div>
-        <a href="./">Início</a>
-        <a href="./estatuto.html">Estatuto</a>
-        <a href="./manifesto.html">Manifesto</a>
-        <a href="./primeiros passos.html">Primeiros Passos</a>
-        <a href="./camaradas.html">Cadastro de Camarada</a>
-        <a href="./membros.html">Cadastro de Membros</a>
-        <a href="./faq.html">Perguntas Frequentes</a>
-        <a href="./curadoria.html">Sugestão de Projeto</a>
-        <a href="./projetos em andamento.html">Projetos em Andamento</a>
-        <a href="./projetos finalizados.html">Projetos Finalizados</a>
+        <span>
+            <p>Sobre Nós</p>
+            <a href="./estatuto.html">Estatuto</a>
+            <a href="./manifesto.html">Manifesto</a>
+            <a href="./primeiros passos.html">Primeiros Passos</a>
+            <a href="./faq.html">Perguntas Frequentes</a>
+        </span>
+
+        <span>
+            <p>Cadastro</p>
+            <a href="./camaradas.html">Cadastro de Camarada</a>
+            <a href="./membros.html">Cadastro de Membros</a>
+        </span>
+
+        <span>
+            <p>Projetos</p>
+            <a href="./curadoria.html">Sugestão de Projeto</a>
+            <a href="./projetos em andamento.html">Projetos em Andamento</a>
+            <a href="./projetos finalizados.html">Projetos Finalizados</a>
+        </span>
     </div>
 </div>
