--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,58 +1,58 @@
 <div class="header">
     <a class="logo" href="/"><img src="./assets/icons/menu_logo.png" alt=""></a>
     <label for="toggle-menu" class="hamburger">&#9776;</label>
-    <div class="menu">
-        <li>
+    <div class="menu" role="menu">
+        <li role="menuitem" role="menuitem">
             <a class="botao-menu" href="./" home>Início</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./primeiros passos.html" first-steps>Primeiros Passos</a>
         </li>
 
-        <li>
-            <a class="botao-menu dropdown" about estatuto manifesto>Sobre Nós</a>
-            <ul class="sub-menu">
-                <li>
-                    <a class="botao-menu" href="./estatuto.html" estatuto>Estatuto</a>
+        <li role="menuitem">
+            <a class="botao-menu dropdown" tabindex="0" about estatuto manifesto>Sobre Nós</a>
+            <ul class="sub-menu" aria-expanded="false" aria-hidden="true">
+                <li role="menuitem">
+                    <a class="botao-menu" href="./estatuto.html" tabindex="0" estatuto>Estatuto</a>
                 </li>
 
-                <li>
-                    <a class="botao-menu" href="./manifesto.html" manifesto>Manifesto</a>
+                <li role="menuitem">
+                    <a class="botao-menu" href="./manifesto.html" tabindex="0" manifesto>Manifesto</a>
                 </li>
             </ul>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./faq.html" faq>Perguntas Frequentes</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./curadoria.html" curadoria>Sugestão de Projeto</a>
         </li>
 
-        <li>
-            <a class="botao-menu" projetos andamento finalizado>Projetos</a>
-            <ul class="sub-menu">
-                <li>
-                    <a class="botao-menu" href="./projetos em andamento.html" andamento>Andamento</a>
+        <li role="menuitem">
+            <a class="botao-menu" tabindex="0" projetos andamento finalizado>Projetos</a>
+            <ul class="sub-menu" aria-expanded="false" aria-hidden="true">
+                <li role="menuitem">
+                    <a class="botao-menu" href="./projetos em andamento.html" tabindex="0" andamento>Andamento</a>
                 </li>
 
-                <li>
-                    <a class="botao-menu" href="./projetos finalizados.html" finalizado>Finalizados</a>
+                <li role="menuitem">
+                    <a class="botao-menu" href="./projetos finalizados.html" tabindex="0" finalizado>Finalizados</a>
                 </li>
             </ul>
         </li>
 
-        <li>
-            <a class="botao-menu" cadastro membros camaradas>Cadastro</a>
-            <ul class="sub-menu">
-                <li>
-                    <a class="botao-menu" href="./membros.html" membros>Membros</a>
+        <li role="menuitem">
+            <a class="botao-menu" tabindex="0" cadastro membros camaradas>Cadastro</a>
+            <ul class="sub-menu" aria-expanded="false" aria-hidden="true">
+                <li role="menuitem">
+                    <a class="botao-menu" href="./membros.html" tabindex="1" membros>Membros</a>
                 </li>
 
-                <li>
-                    <a class="botao-menu" href="./camaradas.html" camaradas>Camaradas</a>
+                <li role="menuitem">
+                    <a class="botao-menu" href="./camaradas.html" tabindex="1" camaradas>Camaradas</a>
                 </li>
             </ul>
         </li>
@@ -61,56 +61,56 @@
     <div class="menu-mobile" style="display: none;">
     </div>
     <div style="display: none;">
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./" home>Início</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./primeiros passos.html" first-steps>Primeiros Passos</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu dropdown" about estatuto manifesto>Sobre Nós</a>
             <ul class="sub-menu">
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./estatuto.html" estatuto>Estatuto</a>
                 </li>
 
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./manifesto.html" manifesto>Manifesto</a>
                 </li>
             </ul>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./faq.html" faq>Perguntas Frequentes</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" href="./curadoria.html" curadoria>Sugestão de Projeto</a>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" projetos andamento finalizado>Projetos</a>
             <ul class="sub-menu">
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./projetos em andamento.html" andamento>Andamento</a>
                 </li>
 
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./projetos finalizados.html" finalizado>Finalizados</a>
                 </li>
             </ul>
         </li>
 
-        <li>
+        <li role="menuitem">
             <a class="botao-menu" cadastro membros camaradas>Cadastro</a>
             <ul class="sub-menu">
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./membros.html" membros>Membros</a>
                 </li>
 
-                <li>
+                <li role="menuitem">
                     <a class="botao-menu" href="./camaradas.html" camaradas>Camaradas</a>
                 </li>
             </ul>
