--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: OpenDyslexic;
-    src: url("../assets/fonts/OpenDyslexic-Regular.otf");
+    src: url('../assets/fonts/OpenDyslexic-Regular.otf');
 }
 @font-face {
     font-family: Molot;
-    src: url("../assets/fonts/Molot.otf");
+    src: url('../assets/fonts/Molot_GTRR.otf');
 }
